<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"

        android:layout_height="90dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:contentScrim="@color/DarkPrimaryColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="639dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_addItem"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            android:layout_marginBottom="5dp"/>
        <Spinner
            android:id="@+id/countries_spinner"
            android:layout_width="wrap_content"
            android:ems="10"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />
            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sBtnimg"
                android:background="@drawable/gradient2"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="464dp"
                app:backgroundTint="@null"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sBtnAddiem"
            android:background="@drawable/gradient"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="464dp"
            app:backgroundTint="@null"
            android:layout_marginRight="20dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>